aligning text center and fixing submit button

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body{
   padding: 0;
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   height: 100vh;
 }
@@ -24,7 +25,7 @@ h1{
 }
 p{
   font-size: 16px;
-  color: #FDB927;
+  color: #080704;
   margin-bottom: 20px;
 }
 li{
@@ -67,6 +68,15 @@ input[type="tel"]{
   border-radius: 6px;
   cursor: pointer;
   font-size: 14px;
+}
+input[type="submit"]{
+  background-color: #d3d3d3;
+  color: black;
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  font-size: 12px;
 }
 input[type="submit"]:hover {
   background-color: #ebc62d;
